Build a fraction tab: Fixed: Score went to -1 when popping out a single fraction from a non-complete level.
Build a fraction tab: Added score readout: each completed level is worth one point
Build a fraction tab: Improved fonts and layout for scoreboard
Build a fraction tab: Made it so you can't drop more than one match into a scoring cell
Build a fraction tab: Added transparency animation to the smilie face dialog
Build a fraction tab: Fixed: When ejecting a fraction from a scoring cell when smilie face is showing, should unshow the smiling face.
Build a fraction tab: Fixed: When ejecting a fraction from the scoring cell, it should become a card again.
Build a fraction tab: For fractions, split button should be on the left to match up with when the fraction is in the scoring cell.
Build a fraction tab: Fixed: Finished fractions (in target cells) still show when going to the next level
Build a fraction tab: Dragged items move to the front
Build a fraction tab: Fixed: After splitting a complete fraction, fraction skeleton not draggable.
Build a fraction tab: fixed: smiling face not shown after completing all questions
Build a fraction tab: Fixed fraction card size and location
Build a fraction tab: Shrink fraction when dropped in a target cell
Build a fraction tab: animate fractions to target cell when dropped in
Build a fraction tab: Fixed: Shouldn't be able to drop numbers into a fraction skeleton that is in the toolbox
Build a fraction tab: Fixed: Initial fraction skeleton should animate to toolbox location if dropped in toolbox, not back to the middle of the screen
Build a fraction tab: Show filled in fractions on a "card", have the card disappear when it drops in the scoring cell
Build a fraction tab: Made target cells a little smaller
Build a fraction tab: Made scoring cells have the same shade of gray as the toolbox
Build a fraction tab: Added a "split" button to completed fractions that appear in the scoring cells