@@ -19,8 +19,7 @@ import edu.colorado.phet.fractionsintro.matchinggame.view.fractions.FilledPatter
 import static edu.colorado.phet.fractionsintro.buildafraction.model.NumberTarget.target;
 import static edu.colorado.phet.fractionsintro.matchinggame.view.fractions.FilledPattern.sequentialFill;
 import static fj.data.List.*;
-import static java.awt.Color.green;
-import static java.awt.Color.red;
+import static java.awt.Color.*;
 
 /**
  * Model for the Build a Fraction tab.
@@ -103,9 +102,10 @@ public class BuildAFractionModel {
                  i == 3 ? new NumberLevel( list( 1, 1, 2, 3, 3, 3, 4, 5, 6, 7, 8, 9 ), list( target( 1, 1, red, pyramid1 ),
                                                                                              target( 3, 4, green, pyramid4 ),
                                                                                              target( 5, 9, lightBlue, pyramid9 ) ) ) :
-                 new NumberLevel( list( 4, 3, 3, 2, 2, 1, 5, 6, 7, 8, 9 ), shuffle( list( target( 4, 3, red, pie ),
-                                                                                          target( 3, 2, green, pie ),
-                                                                                          target( 2, 1, lightBlue, pie ) ) ) )
+                 i == 4 ? new NumberLevel( list( 4, 3, 3, 2, 2, 1, 5, 6, 7, 8, 9 ), shuffle( list( target( 4, 3, red, pie ),
+                                                                                                   target( 3, 2, green, pie ),
+                                                                                                   target( 2, 1, lightBlue, pie ) ) ) ) :
+                 numberLevel5()
             );
         }
     }};
@@ -140,6 +140,19 @@ public class BuildAFractionModel {
                                                                                      target( 4, 5, colors.index( 2 ), representation ) ) ) );
     }
 
+    private NumberLevel numberLevel5() {
+        Distribution<F<Fraction, FilledPattern>> representation = new Distribution<F<Fraction, FilledPattern>>() {{
+            put( horizontalBar, 20 );
+            put( verticalBar, 20 );
+            put( pie, 30 );
+        }};
+        List<Color> colors = shuffledColors();
+        return new NumberLevel( shuffle( list( target( 3, 2, colors.index( 0 ), representation.draw() ),
+                                               target( 2, 3, colors.index( 1 ), representation.draw() ),
+                                               target( 5, 4, colors.index( 2 ), representation.draw() ),
+                                               target( 4, 5, colors.index( 3 ), representation.draw() ) ) ) );
+    }
+
     //Choose a representation, pies or bars, but use the same representation for all things
     private NumberLevel numberLevel0() {
         List<Color> colors = shuffledColors();
@@ -148,7 +161,7 @@ public class BuildAFractionModel {
                                                                          target( 2, 3, colors.index( 2 ), pie ) ) ) );
     }
 
-    private List<Color> shuffledColors() {return shuffle( list( red, green, lightBlue ) );}
+    private List<Color> shuffledColors() {return shuffle( list( red, green, lightBlue, orange ) );}
 
     private static <T> List<T> shuffle( final List<T> list ) {
         ArrayList<T> collection = new ArrayList<T>( list.toCollection() );
