@@ -1,3 +1,5 @@
+Build a fraction tab: Added a level
+Build a fraction tab: Made it possible to have more than 3 scoring cells
 Build a fraction tab: Fixed: Score went to -1 when popping out a single fraction from a non-complete level.
 Build a fraction tab: Added score readout: each completed level is worth one point
 Build a fraction tab: Improved fonts and layout for scoreboard
